apps-mimir/base/mimir/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mimir
  # annotations:
    # scheduler.alpha.kubernetes.io/node-selector: node_workload_type=apps
