apps-mimir/base/mimir/network-policies.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-ingress
  namespace: mimir
spec:
  podSelector: {}
  ingress:
  - {}
  policyTypes:
  - Ingress
